adding start and error model for employees db.

--- a/RelevantPizza/appsettings.json
+++ b/RelevantPizza/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionsString": {
+    "DefaultConnection": "Server=localhost;Database=RelevantPizza;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
